# performance-test-sauron

./: Cargo.toml  README.md  build.sh  deploy.sh  serve.sh
client/: Cargo.toml  build_data.js  index.html
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  page.rs
