[workspace]

members = [
    "server",
    "client"
]

[patch.crates-io]
#sauron = { git = "https://github.com/ivanceras/sauron.git", branch = "master" }
sauron = { path = "../sauron" }


[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
# optimize for binary size
#opt-level = "s"
# optimize for binary size, but also turn off loop vectorization.
#opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
