[package]
name = "client"
version = "0.1.0"
authors = ["Jovansonlee Cesar<ivanceras@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.29"
sauron = "0.42"
console_error_panic_hook = { version = "0.1"}
log = "0.4"
console_log = {version ="0.2", features = ["color"]}
serde = { version = "1.0", features = ["serde_derive"]}
serde_json = "1.0"
wee_alloc = { version = "0.4", optional = true }

[features]
alt-syntax = []


[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
# optimize for binary size
#opt-level = "s"
# optimize for binary size, but also turn off loop vectorization.
opt-level = "z"
lto = true
panic = "abort"
