[package]
name = "server"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"

[dependencies]
warp = "0.3"
sauron = { path = "../../sauron" }
tokio = { version = "1.9", features = ["full"] }
serde_json = "1.0"
percent-encoding = "2"

client = { path = "../client" }
